2002-09-09  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/api/faq.dox: add three subsections.

2002-09-09  Theodore A. Roth  <troth@verinet.com>

	* doc/TODO: Added note about testsuite.

2002-09-09  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/stdlib.h: improve grouping for old doxygen versions.

2002-09-09  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* libc/stdlib/malloc.c: use _SFR_IO16() around the SP address.

2002-09-09  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/stdlib.h: rename DTOSTRE_* into DTOSTR_*.
	* libm/fplib/dtostre.S: rename DTOSTRE_* into DTOSTR_*.

2002-09-08  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/stdlib.h: document this file.
	* libm/fplib/dtostre.S: use <stdlib.h>.

2002-09-08  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* libm/fplib/dtostre.S: another leading "0" fix.

2002-09-07  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* libm/fplib/dtostre.S: don't print "." iff prec == 0.

2002-09-07  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* libm/fplib/fplib.inc: introduce FPMOV and FPLOAD.
	* libm/fplib/dtostre.S: use FPMOV, FPLOAD, and XCALL.

2002-09-06  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* libm/fplib/dtostre.S: fix numerous bugs and nits.

2002-09-04  Theodore A. Roth  <troth@verinet.com>

	* doc/TODO: Add what needs to be doxumented still.

2002-09-04  Theodore A. Roth  <troth@verinet.com>

	* configure.in(AM_INIT_AUTOMAKE): Bump version.
	* doc/TODO: Add note about __ prefix of args in dox.
	* include/setjmp.h: Add dox comments.

2002-09-03  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/api/Makefile.am: implement --enable-versioned-doc
	* configure.in: implement --enable-versioned-doc

2002-09-02  Theodore A. Roth  <troth@verinet.com>

	* configure.in(AM_INIT_AUTOMAKE): Bump version.
	* NEWS: Note mega69 as new supported device.
	* doc/api/main_page.dox: Add list of supported devices.

2002-08-31  Marek Michalkiewicz  <marekm@amelek.gda.pl>

	* configure.in (AM_INIT_AUTOMAKE): Update version.